added laravel mcp and public cargo ednpoints
